--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@types/react-window": "^1.8.8",
     "bootstrap": "^5.3.3",
     "chart.js": "^4.4.7",
     "react": "^19.0.0",
@@ -17,6 +18,7 @@
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
+    "react-window": "^1.8.11",
     "socket.io-client": "^4.8.1",
     "sweetalert2": "^11.17.2",
     "sweetalert2-react-content": "^5.1.0"
